# Package_test

./: Makefile  README.md  pyproject.toml  requirements-dev.txt
src/Package_testing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data_tools.egg-info/: PKG-INFO  SOURCES.txt
src/monPackage/: __init__.py  __main__.py  nettoyage.py  stats.py
tests/: test_basic.py  test_functions.py
